--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <title>Profile Jumper!</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+    <link rel="stylesheet" href="/assets/css/profile-jumper.css">
   </head>
   <body>
 
@@ -29,12 +32,75 @@
       </div>
     </nav>
 
-    <div class="container-fluid">
-      <h1>Profile Jumper!</h1>
+    <div class="container">
+      <div class="row justify-content-md-center profile-jumper-header">
+        <div class="col-auto float-right profile-jumper-branding-logo">
+          <img src="/assets/image/brand/profile-jumper.png" alt="Profile Jumper!" />
+        </div>
+        <div class="col-auto float-left profile-jumper-branding-heading">
+          <h1>Profile Jumper!</h1>
+          <p>The brower extension that helps you jump between profiles.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container my-4">
+      <div class="row text-center">
+        <div class="col-auto text-center">
+          <p>The open source browser extension which is 100% free! <br/>Easy to configure and you can setup profiles instantly.</p>
+        </div>
+        <div class="col-auto text-left">
+          <button class="chrome-button"><i class="fa fa-chrome"></i> Add to chrome</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container my-3">
+      <figure class="figure">
+        <img src="/assets/image/extension/profile-jumper-screenshot.jpg" class="figure-img img-fluid rounded" alt="See Profile Jumper! in action">
+        <figcaption class="figure-caption text-center">Above is how Profile Jumper! works in action.</figcaption>
+      </figure>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="/assets/javascript/profile-jumper.js"></script>
   </body>
 </html>
