--- a/credits/index.html
+++ b/credits/index.html
@@ -3,35 +3,105 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Profile Jumper! Credits</title>
+    <meta name="google-site-verification" content="L4Fd2wTMajjabah9sUdGYMQ7yr50JwTJDGudRruLM-E" />
+
+    <title>Profile Jumper!</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+    <link rel="stylesheet" href="/assets/css/profile-jumper.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150770343-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-150770343-1');
+    </script>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
       <a class="navbar-brand" href="https://profile-jumper.github.io">
           <img src="/assets/image/brand/profile-jumper.png" width="30" height="30" class="d-inline-block align-top" alt="Profile Jumper! Logo">
-          Profile Jumper!
         </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="/how-to">How To</a>
-          <a class="nav-item nav-link" href="/credits">Credits</a>
+          <a class="nav-item nav-link active" href="/credits">Credits</a>
           <a class="nav-item nav-link" href="/support-this-project">Support this project</a>
         </div>
       </div>
     </nav>
 
-    <div class="container-fluid">
-      <h1>Credits</h1>
+    <div class="container">
+      <h1 class="text-center">Credits</h1>
+      <p>These are the various contributors who helped make this browser extension! If you want to help, please see the <a href="/support-this-project">support this project section</a>.</p>
     </div>
+
+    <div class="container my-5">
+      <div class="card-deck credits">
+
+          <div class="card credits-card">
+            <div class="card-header">
+              <a href="https://mrupgradable.me" target="_blank"><img src="/assets/image/credit/contributor/mrupgradable.png" class="card-img-top mx-auto d-block" alt="Profiles as icons"></a>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><a href="https://mrupgradable.me" target="_blank">Mr Upgradable</a></h5>
+              <p class="card-text">
+                Mr Upgradable is the benevolant dictator of this project, he initially started this project out of wanting to solve the issue of seeing his social profile bookmarks disapear from view!
+                Now, he's even more happier ;)
+              </p>
+              <a href="https://mrupgradable.blog" target="_blank" class="btn btn-primary">Read my blog</a>
+            </div>
+          </div>
+
+          <div class="card credits-card">
+            <div class="card-header">
+              <img src="/assets/image/credit/contributor/unknown.png" class="card-img-top mx-auto d-block" alt="You're name here">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Your name here!</h5>
+              <p class="card-text">Do anything to help this project and we will link to any of your social profile here. It's a WIN/WIN opportunity because this project gets better and you get more known!</p>
+              <a href="/support-this-project" class="btn btn-primary">Get your profile added here!</a>
+            </div>
+          </div>
+
+      </div>
+    </div>
+
+    <div class="container my-5">
+      <h1 class="text-center">You're welcome to use an alias</h1>
+      <p>
+        You do not need to use your real name, you can decide if you want to use an alias or your real name or even a project you are working on. If you are not sure, just see one of the other contributors to this project.
+        We are just happy that you help with some contribution to make this project better! See the <a href="/support-this-project">support this project</a> section.
+      </p>
+    </div>
+
+    <section id="footer">
+  		<div class="container">
+        <div class="row text-center text-xs-center text-sm-left text-md-left">
+  				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+            <ul class="list-unstyled quick-links">
+              <li class="list-inline-item"><a href="/">Home</a></li>
+              <li class="list-inline-item"><a href="/how-to">How to</a></li>
+              <li class="list-inline-item"><a href="/credits">Credits</a></li>
+              <li class="list-inline-item"><a href="/support-this-project">Support this project</a></li>
+            </ul>
+  				</div>
+  				</hr>
+  			</div>
+  		</div>
+  	</section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   </body>
 </html>
