--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <link rel="stylesheet" href="/assets/css/profile-jumper.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150770343-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-150770343-1');
+    </script>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
       <a class="navbar-brand" href="https://profile-jumper.github.io">
           <img src="/assets/image/brand/profile-jumper.png" width="30" height="30" class="d-inline-block align-top" alt="Profile Jumper! Logo">
-          Profile Jumper!
         </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,11 +53,11 @@
 
     <div class="container my-4">
       <div class="row text-center">
-        <div class="col-auto text-center">
+        <div class="col-8 text-center align-middle">
           <p>The open source browser extension which is 100% free! <br/>Easy to configure and you can setup profiles instantly.</p>
         </div>
-        <div class="col-auto text-left">
-          <button class="chrome-button"><i class="fa fa-chrome"></i> Add to chrome</button>
+        <div class="col-4 text-left align-top">
+          <a href="https://chrome.google.com/webstore/detail/profile-jumper-jump-betwe/fgjjcaimpepmohgbbeaooecldlknlkef" class="btn btn-primary btn-lg" role="button"><i class="fa fa-chrome"></i> Add to Chrome</a>
         </div>
       </div>
     </div>
@@ -62,45 +69,83 @@
       </figure>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+    <div class="container my-5">
+      <h2 class="text-center">What's the problem?</h2>
+        <p>
+          <strong>Problem:</strong> The creators found the problem of book marking various sites, articles, journals, interests and wanted to access their online profiles.
+          But with each interesting reference or link, bookmarked profiles get pushed asside! (We thought it was rather annoying enough to create this great little tool).
+        </p>
+        <p>
+          <strong>Solution:</strong> Now with this browser extension, there is a solution. Have all your profiles in one convienient location. So you don't need to invent a bookmarking proceedure - instead just focus on your insterests!
+          When you want to share or access a social profile, you simply click and its just instantly available!
+        </p>
+    </div>
+
+    <div class="container my-5">
+      <div class="card-deck">
+
+          <div class="card feature-card">
+            <div class="card-header">
+              <img src="/assets/image/extension/profiles.png" class="card-img-top mx-auto d-block" alt="Profiles as icons">
+            </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Profiles Icons</h5>
+              <p class="card-text">
+                Profile icons are available for most popular social nextworks. What's more is there are other links you can customise too.
+                The idea is to have you social profiles all easily accessible in one place.
+              </p>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+
+          <div class="card feature-card">
+            <div class="card-header">
+              <img src="/assets/image/extension/configure.png" class="card-img-top mx-auto d-block" alt="Easy to configure">
+            </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Configure Easily</h5>
+              <p class="card-text">Profiles are confured so easily. We have tied to make this as easy and efficient as possible. See the <a href="/how-to/">how to</a> section for more information.</p>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+
+          <div class="card feature-card">
+            <div class="card-header">
+              <img src="/assets/image/extension/open-source.png" class="card-img-top mx-auto d-block" alt="Open Source">
+            </div>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Open Source</h5>
+              <p class="card-text">This browser extension is completely open source software, so you can view the code and even apply changes if you want. See the <a href="https://github.com/mrupgradable/profile-jumper" target="_blank">GitHub project here</a>.</p>
             </div>
           </div>
-        </div>
+
       </div>
     </div>
+
+    <div class="container my-5">
+      <h2 class="text-center">Who is behind this?</h2>
+        <p>
+          Initially started by <a href="https://www.instagram.com/mrupgradable/" target="_blank">Mr Upgradable</a>, however take a look at the <a href="/credits">credits</a> section for all contributors. If you are interested in helping promote this project, translating or anything else! Take a look at <a href="/support-this-project">support this project</a> section for more information.
+        </p>
+    </div>
+
+    <section id="footer">
+  		<div class="container">
+        <div class="row text-center text-xs-center text-sm-left text-md-left">
+  				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+            <ul class="list-unstyled quick-links">
+              <li class="list-inline-item"><a href="/">Home</a></li>
+              <li class="list-inline-item"><a href="/how-to">How to</a></li>
+              <li class="list-inline-item"><a href="/credits">Credits</a></li>
+              <li class="list-inline-item"><a href="/support-this-project">Support this project</a></li>
+            </ul>
+  				</div>
+  				</hr>
+  			</div>
+  		</div>
+  	</section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="/assets/javascript/profile-jumper.js"></script>
   </body>
 </html>
