updated credits page + how to (holding)

--- a/credits/index.html
+++ b/credits/index.html
@@ -76,10 +76,25 @@
     </div>
 
     <div class="container my-5">
-      <h1 class="text-center">You're welcome to use an alias</h1>
+      <h2 class="text-center">You're welcome to use an alias</h2>
       <p>
         You do not need to use your real name, you can decide if you want to use an alias or your real name or even a project you are working on. If you are not sure, just see one of the other contributors to this project.
         We are just happy that you help with some contribution to make this project better! See the <a href="/support-this-project">support this project</a> section.
+      </p>
+    </div>
+
+    <div class="container my-5">
+      <h2 class="text-center">How we recognize your efforts</h2>
+      <p>
+        We want to thank you for your efforts and give thanks by recognizing you!
+      </p>
+      <ul class="list-group my-3">
+        <li class="list-group-item">1. Link your profile image</li>
+        <li class="list-group-item">2. Link your name or alias</li>
+        <li class="list-group-item">3. Add a link to the button of your profile</li>
+      </ul>
+      <p>
+        You can use one link to one of your profiles or have 3 different ones, what's more if you are working on your own project - you can link that too. It's just our way of saying thank you and improving your reputation.
       </p>
     </div>
 
