--- a/how-to/index.html
+++ b/how-to/index.html
@@ -41,7 +41,7 @@
 
     <div class="container">
       <h1 class="text-center">How To</h1>
-      <p>Coming Soon!</p>
+      <p>Coming Soon! How to videos and resources will be provided here to help you use Profile Jumper!</p>
     </div>
 
     <section id="footer">
