updated credits + support this project

--- a/credits/index.html
+++ b/credits/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="container my-5">
-      <h2 class="text-center">You're welcome to use an alias</h2>
+      <h2>You're welcome to use an alias</h2>
       <p>
         You do not need to use your real name, you can decide if you want to use an alias or your real name or even a project you are working on. If you are not sure, just see one of the other contributors to this project.
         We are just happy that you help with some contribution to make this project better! See the <a href="/support-this-project">support this project</a> section.
@@ -84,7 +84,7 @@
     </div>
 
     <div class="container my-5">
-      <h2 class="text-center">How we recognize your efforts</h2>
+      <h2>How we recognize your efforts</h2>
       <p>
         We want to thank you for your efforts and give thanks by recognizing you!
       </p>
