--- a/support-this-project/index.html
+++ b/support-this-project/index.html
@@ -39,9 +39,31 @@
       </div>
     </nav>
 
-    <div class="container main-content">
+    <div class="container">
       <h1 class="text-center">Support This Project</h1>
-      <p>Coming Soon!</p>
+      <p>How can you support this project? Would you like to contribute by helping with anything to benefit this project, see more below on how to support this project.</p>
+    </div>
+
+    <div class="container my-5">
+      <h2 class="text-center">First things first!</h2>
+      <p>
+        As this is an open souce project, the benevolant dictator of this project has decided not to accept your money! <strong>Yes, we don't want your money!</strong>
+        If you really like this browser extension, it would be really marvelous if you could simply tell someone else about it, that's right, just tell someone about it and it will make us happy.
+      </p>
+
+      <h3>How can you contribute?</h3>
+      <ul class="list-group my-3">
+        <li class="list-group-item">Spread the word</li>
+        <li class="list-group-item">We need translators</li>
+        <li class="list-group-item">See a bug, help us fix it</li>
+        <li class="list-group-item">Suggest a new feature</li>
+      </ul>
+
+      <h3>How do you benefit?</h3>
+      <p>
+        We really want to recognize all contributors and on the <a href="/credits">credits</a> section, your profile will be added there. This will happen in chronological order.
+        In the credits section you can link to your online profiles or a project you are working on. Not just that, you can increase you reputation and use this as social credit and even state this on your CV/Resume!
+      </p>
     </div>
 
     <section id="footer">
